--- a/settings.json
+++ b/settings.json
@@ -5,5 +5,6 @@
     "editor.useTabStops": true,
     "workbench.colorTheme": "Visual Studio Dark",
     "editor.fontFamily": "ui-monospace, Menlo, Monaco, Cascadia Mono",
-    "editor.minimap.enabled": false
+    "editor.minimap.enabled": false,
+    "workbench.preferredDarkColorTheme": "Default Light+"
 }
