VS Code Settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
-{
-    "editor.fontSize":12,
+ {
+    "editor.fontSize":18,
     "editor.useTabStops": true,
-    "workbench.colorTheme": "Default Light+",
+    "workbench.colorTheme": "Visual Studio Dark",
     "editor.fontFamily": "ui-monospace, Menlo, Monaco, Cascadia Mono",
     "editor.minimap.enabled": false,
     "workbench.preferredDarkColorTheme": "Default Light+"
